# lexcapital

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: benchmark_spec_v0.2.md  eval_protocol.md  scenario_authoring_guide.md  scoring_rubric.md
examples/: agent_eval.example.yaml
examples/actions/: hold_actions.jsonl  invalid_future_data_actions.jsonl  invalid_no_context_overtrade.jsonl  invalid_self_cross_actions.jsonl
scenarios/mvp/: crypto_001_perp_funding_basis.yaml  crypto_002_bridge_delay_trap.yaml  fund_001_stale_nav_redemption.yaml  fund_002_etf_creation_premium.yaml  legal_001_information_boundary.yaml  noctx_001_no_edge_hold.yaml  pm_001_official_filing_contract.yaml  pm_002_ambiguous_resolution_criteria.yaml  rab_001_qualified_hedge_rebate.yaml  rab_002_fee_tier_mirage.yaml  rab_003_settlement_clock_exception.yaml  rates_001_sofr_cash_note.yaml  stock_001_low_float_earnings_drift.yaml  stock_002_merger_spread_borrow_fee.yaml
tests/: conftest.py  test_agent_integration.py  test_agent_runner_tools.py  test_cli.py  test_collect_actions_then_replay.py  test_each_scenario_oracle_and_traps.py  test_extended_oracle_redpath.py  test_extended_scenarios_validate.py  test_legal_rules_pack.py  test_model_adapter_contract.py  test_package_rename.py  test_phase2_model_runners.py  test_policy_runner.py  test_prompt_hides_private_fields.py  test_real_data_provenance.py  test_replay_deterministic.py  test_rule_engine.py  test_runner_does_not_expose_hidden_fields.py  test_scenario_audit.py  test_scenario_audit_hardening.py  test_schema_validation.py  test_scorer.py
(+100 files in other folders)
